--- a/app/globals.css
+++ b/app/globals.css
@@ -1,42 +1,69 @@
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  /* Neutrals */
+  --neutral-100: #FEFEFE;
+  --neutral-200: #F8F5F0;
+  --neutral-300: #E0DED8;
+
+  /* Text */
+  --text-primary: #100f18;
+  --text-secondary: #42454D;
+
+  /* Accents */
+  --accent-100: #d5a679; /* buttons and highlights */
+  --accent-200: #a67c52; /* hover states, details */
+  --accent-300: #846c5b; /* active elements, slight depth */
+
+  /* Shadows */
+  --shadow-light: 0px 4px 12px rgba(0, 0, 0, 0.08);
+  --shadow-medium: 0px 6px 16px rgba(0, 0, 0, 0.12);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-* {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
-  padding: 0;
+}
+* {
   margin: 0;
 }
-
-a {
-  color: inherit;
-  text-decoration: none;
+html,
+body {
+  height: 100%;
+  background-color: var(--neutral-100);
 }
+body {
+  color: var(--text-primary);
+  line-height: 1.5;
+  -webkit-font-smoothing: antialiased;
+}
+img,
+picture,
+video,
+canvas,
+svg {
+  display: block;
+  max-width: 100%;
+}
+input,
+button,
+textarea,
+select {
+  font: inherit;
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+  &::placeholder {
+    color: var(--text-secondary);
   }
+}
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  overflow-wrap: break-word;
+}
+#root,
+#__next {
+  isolation: isolate;
 }
