--- a/components/books/book-card.module.css
+++ b/components/books/book-card.module.css
@@ -1,5 +1,42 @@
 .bookCard {
+    color: inherit;
+    text-decoration: none;
+
     strong, span {
         display: block;
     }
+
+    strong {
+        margin-top: 0.5rem;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;  
+        overflow: hidden;
+    }
+
+    span:first-of-type {
+        color: var(--text-secondary);
+    }
+}
+
+.bookCover {
+    position: relative;
+    width: fit-content;
+
+    img {
+        display: block;
+    }
+}
+
+.bookFormat {
+    position: absolute;
+    top: 0.375rem;
+    right: 0.375rem;
+    display: block;
+    padding: 4px;
+    background-color: var(--accent-100);
+    border-radius: 50%;
+    box-shadow: var(--shadow-light);
+    color: var(--accent-300);
+    z-index: 2;
 }
